included stylesheet into hello.html

--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,4 @@
-<!--author: Juss Joosep HoldtSs-->
+<!--author: Juss Joosep Holdt (test@gmail.com)-->
 <html>
     <head>
         <title>Hello world page</title>
