added meta title

--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,10 @@
 <!--author: Juss Joosep HoldtSs-->
 <html>
     <head>
+        <title>Hello world page</title>
     </head>
     <body>
         <h1>Hello, World!</h1>
+        <p>let's learn git together.</p>
     </body>
 </html>
